# Spellfire

./: .gitignore  API.md  README.md  TODO.md  client.py  discord.go  main.go  main.py
frontend/: ARCHITECTURE.md  Cargo.toml  build.rs  index.html  justfile  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js
frontend/.devcontainer/: devcontainer.json
frontend/src/: assets.ts  main.rs  main.ts  startScreen.ts  style.css  time_shim.rs
frontend/src/auth/: discordActivities.ts
frontend/src/camera/: camera_target.rs  mod.rs
frontend/src/client/: controls.rs  keybinds.rs  mod.rs
frontend/src/communication/: publisher.ts  reactive.ts  service.ts  system.ts
frontend/src/connection/: client_packets.rs  mod.rs  ping.rs  server_packets.rs
frontend/src/display/: display.ts  entity_sprite.rs  layer.rs  mod.rs  player.rs  transform.rs
frontend/src/entities/: entity.ts  entityDriver.ts  entitySpec.ts  entityType.ts  parsePacketEntity.ts  player.ts
frontend/src/entity/: collider.rs  mod.rs
frontend/src/game/: display.ts  game.ts  gameLoop.ts
frontend/src/lib/: aabb.ts  vec2.ts
frontend/src/math/: aabb.ts  ray.ts  shape.ts  vec2.ts
frontend/src/multiplayer/: connection.ts  packets.ts  pb-spec.d.ts  pb-spec.js
frontend/src/packet/: conv.rs  entity.rs  mod.rs
frontend/src/physics/: mod.rs  physicsDriver.ts  physicsSystem.ts  velocity.ts
frontend/src/player/: controlsSystem.ts  item.ts  movementSystem.ts  playerState.ts
frontend/src/ui/: events.rs  (+6 more)
frontend/static/: index.html  main.js  style.css  uiActionHandler.js  uiEvents.js
(+104 files in other folders)
