[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy-inspector-egui = "0.32.0"
bevy_framepace = "0.19.1"
bevy_hanabi = { version = "0.16.0", default-features = false, features = ["2d"] }
bevy_tween = "0.9.1"
bevy_web_keepalive = "0.3.5"
bimap = "0.6.3"
delegation = "0.4.0"
iyes_perf_ui = "0.5.0"
js-sys = "0.3.77"
protobuf = "3.7.2"
wasm-bindgen = "0.2.100"
wasm-sockets = "1.0.0"
wasm-timer = "0.2.5"
wee_alloc = "0.4.5"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "animation",
    "async_executor",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_window",
    "default_font",
    "bevy_winit",
    "bevy_input_focus",
    "png",
    "std",
    "web",
    "webgpu",
]

[build-dependencies]
protobuf-codegen = "3.7.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"
